set(tlochat_server_headers client_handlers.h)
set(tlochat_server_sources client_handlers.c tlochat_server.c)
add_executable(tlochat_server ${tlochat_server_headers} ${tlochat_server_sources})
target_include_directories(tlochat_server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(tlochat_server PRIVATE tloc tlocposix)
